--- a/src/components/RandomNumberGenerator/index.css
+++ b/src/components/RandomNumberGenerator/index.css
@@ -17,6 +17,7 @@
   box-shadow: 0 0.4rem 1rem 0 #eaebed;
   border-radius: 0.6rem;
   background-color: #ffffff;
+  text-align: center;
 }
 
 .rand-num-content-header {
