--- a/src/components/RandomNumberGenerator/index.css
+++ b/src/components/RandomNumberGenerator/index.css
@@ -14,19 +14,21 @@
   justify-content: center;
   align-items: center;
   font-family: 'Roboto';
-  box-shadow: 0 0.4rem 1rem 0 #eaebed;
+  box-shadow: 0 0.3rem 1rem 0 #eaebed;
   border-radius: 0.6rem;
   background-color: #ffffff;
   text-align: center;
+  padding: 2.5rem;
+  max-width: 21rem;
 }
 
 .rand-num-content-header {
-  font-size: 2rem;
+  font-size: 1.7rem;
   color: #0b69ff;
 }
 
 .rand-num-content-description {
-  font-size: 1.3rem;
+  font-size: 1rem;
   color: #333333;
 }
 
@@ -35,12 +37,14 @@
   color: #e4ebf3;
   border-radius: 0.4rem;
   padding: 0.5rem 1rem;
-  font-size: 1rem;
+  font-size: 0.8rem;
   cursor: pointer;
   outline: none;
+  border: 0;
 }
 
 .rand-num-text {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
+  font-weight: bold;
   color: #0b69ff;
 }
